
	* Modules/Editors/ProjectCenter/PCEditor.h
	* Modules/Editors/ProjectCenter/PCEditor.m
	* Modules/Editors/ProjectCenter/PCEditor+Document.m
	Clean up parenthesis highlighting.

	* Modules/Editors/ProjectCenter/PCEditor.h
	* Modules/Editors/ProjectCenter/PCEditor.m
	Fix highlighting for standalone editors.

	* Modules/Editors/ProjectCenter/PCEditor+Document.m
	Deleted


2010-06-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Framework/PCProject.m (-fileTypesForCategoryKey:): Add .dylib to
	the list of known library extensions.

2010-06-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Modules/Projects/Application/PCAppProject.m (-writeMakefile):
	* Modules/Projects/Bundle/PCBundleProject.m (-writeMakefile):
	* Modules/Projects/Framework/PCFrameworkProject.m (-writeMakefile):
	* Modules/Projects/Library/PCLibProject.m (-writeMakefile):
	* Modules/Projects/ResourceSet/PCResourceSetProject.m (-writeMakefile)
	* Modules/Projects/Tool/PCToolProject.m (-writeMakefile):
	Fix bug	where PC could include some localized resources in the
	RESOURCE_FILES Makefile variable.

2010-06-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Framework/PCProjectManager.m(-openProjectAt:makeActive:):
	Prevent a crash when opening a subproject by not creating a new
	project window for the subproject. This window is immediately
	released again when the new project's super project is set anyway.

	* Framework/PCProjectManager.m(-closeAllProjects): Fix bug where
	PC would not quit after opening a subproject due to a bogus
	enumerator loop.

2010-06-07  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Framework/PCProjectWindow.m (-dealloc):
	* Modules/Editors/ProjectCenter/PCEditor.m (-dealloc):
	Attempt to prevent crashes when a project is closed by ensuring
	that project and editor windows are closed before their owners are
	deallocated.

2010-06-04 Riccardo Mottola <rmottola@users.sf.net>

	* TextFinder.m:
	check before replacing and allow undo (by Wolfgang Lux)
